--- a/src/pages/LoginPage/styles.css
+++ b/src/pages/LoginPage/styles.css
@@ -1,3 +1,7 @@
+#login .RepoHub {
+  font-size: 5rem;
+}
+
 #login {
   display: flex;
   flex-direction: column;
@@ -12,6 +16,10 @@
   width: 100%;
   max-width: 480px;
   padding: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 #login .field label {
